...
        let appleUserDetail = UserDetail(context: context)
        appleUserDetail.creationDate = now
        appleUserDetail.followerUsersCount = 0
        appleUserDetail.followingUsersCount = 0
        appleUserDetail.userCreationDate = Date(timeIntervalSinceReferenceDate: 1317099723)
        appleUserDetail.location = "Cupertino, CA"
        appleUserDetail.name = "Apple"
        appleUserDetail.username = "Apple"
        appleUserDetail.profileImageURL = URL(string: "https://pbs.twimg.com/profile_images/1283958620359516160/p7zz5dxZ.jpg")
        appleUserDetail.url = nil
        appleUserDetail.user = appleUser
        appleUserDetail.userAttributedDescription = NSAttributedString(string: "Apple.com", attributes: [.link: URL(string: "http://Apple.com")!])

...
